<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#4d9def"
    android:orientation="horizontal">

    <Button
        android:id="@+id/save_button_notes"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:elevation="10dp"
        android:layout_marginLeft="14dp"
        android:background="@drawable/ic_action_save_tag"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/go_back_to_notes_button"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:elevation="10dp"
        android:layout_marginLeft="14dp"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_action_gobackwhite"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/current_date"
        android:textSize="18sp"
        android:textColor="#050505"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/share_code_button"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:elevation="10dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/ic_action_public"/>

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/share_code_button"
        android:layout_marginRight="5dp"
        android:visibility="visible"
        android:elevation="10dp"
       android:background="@drawable/ic_action_refresh"/>



</RelativeLayout>