<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galen.opennotes.MainActivity"
    tools:showIn="@layout/app_bar_main"
    >

    <RelativeLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/weatherback"

        android:elevation="8dp">

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="14dp"/>

        <TextView
            android:id="@+id/weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/weather_image"
            android:layout_marginTop="5dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/low_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_image"
            android:layout_marginLeft="14dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_image"
            android:layout_toRightOf="@id/low_temperature"
            android:text="~" />

        <TextView
            android:id="@+id/high_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@id/weather_image"
            android:layout_toRightOf="@id/middle" />

        <TextView
            android:id="@+id/temperature_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/weather_status"
            android:textSize="80sp"
            android:textStyle="bold"/>

  />


    </RelativeLayout>

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/suggestion_indoor_outdoor"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="Better train indoor"
        android:layout_marginLeft="14dp"
        android:textColor="#123"
        android:textSize="24sp" />



    <LinearLayout
        android:id="@+id/cation_framelayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="5dp"
        android:paddingTop="3dp"
        android:layout_marginLeft="14dp"
        android:orientation="vertical">

        <include
            layout="@layout/caution_tool_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/suggestion_recyclerview"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="15dp"
            android:scrollbarSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/notes_button"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:paddingLeft="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/buttonshap"
            android:shadowColor="#46A83B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:elevation="5dp"
            android:text="Notes"
            android:textColor="#DBFFEC"
            android:layout_weight="0.13" />

        <Button
            android:id="@+id/my_records"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshap"
            android:shadowColor="#46A83B"
            android:elevation="5dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="My Records"
            android:textColor="#DBFFEC" />

    </LinearLayout>


</LinearLayout>
