...
    android:layout_height="?attr/actionBarSize"
    android:background="#4d9def"
    android:orientation="horizontal">


    <Button
        android:id="@+id/go_back_to_main_button"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:visibility="visible"
        android:elevation="10dp"
        android:layout_marginLeft="14dp"
        android:layout_centerVertical="true"
...
